# iot-coursework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  IoT-coursework.c  hardware.c  hardware.h  http_srv.c  idf_component.yml  index.html  led.html  led_control.c  led_control.h  music-change.html  music.h
main/include/: hardware.h  http_srv.h  music.h  wifi_ap.h
main/src/: hardware.c  http_srv.c  wifi_ap.c
main/web/: index.html  led.html  music.html
